--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "node16",
+    "moduleResolution": "node16",
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
@@ -12,7 +12,9 @@
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "types": ["vue"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "declaration": true,
+    "declarationDir": "./dist/types"
   },
   "include": [
     "src/**/*.ts",
